--- a/HRMS1/Hr.Master
+++ b/HRMS1/Hr.Master
@@ -26,6 +26,19 @@
                       <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                       </li>
+                        <li class="nav-item active">
+                        <a class="nav-link" href="HRReg.aspx">Add Employee <span class="sr-only">(current)</span></a>
+                       </li>
+                        </li>
+                         <li class="nav-item active">
+                         <a class="nav-link" href="OfferLatter.aspx">Offer letter<span class="sr-only">(current)</span></a>
+                        </li>
+                         <li class="nav-item active">
+                             <a class="nav-link" href="GenrateSlip.aspx">Genrate PaySlip<span class="sr-only">(current)</span></a>
+                            </li>
+                         <li class="nav-item active">
+                         <a class="nav-link" href="AddEvent.aspx">Add Event<span class="sr-only">(current)</span></a>
+                        </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Hello <asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>
